# RandomCppStuff

./: .gitignore  CMakeLists.txt
cfar/: Benchmarks.md  CMakeLists.txt
cfar/include/: cfar.h
cfar/src/: cfar.cc
complex/: CMakeLists.txt
complex/include/: complex-complex.h
complex/src/: complex-complex.cc
design_patterns/: CMakeLists.txt
design_patterns/include/: design_patterns-strategy.h
design_patterns/src/: design_patterns-design_patterns.cc
matrix/: CMakeLists.txt
matrix/include/: matrix-matrix.h
matrix/src/: matrix-matrix.cc
random_benchmarks/: CMakeLists.txt
random_benchmarks/include/: random_benchmarks-main.h
random_benchmarks/src/: random_benchmarks-main.cc
testing/: CMakeLists.txt
testing/include/: mutable.h  play.h  vector.h
testing/src/: mutable.cc  play.cc  testing.cc  vector.cc
vector/: CMakeLists.txt
vector/include/: vector-vector.h
vector/src/: vector-vector.cc
